adding golang-migrate
Signed-off-by: Vivek Yadav <vivekcode101@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,12 @@ jobs:
     - name: Check out code into the Go Module Directory
       uses: actions/checkout@v2
 
+    - name: Install golang-migrate
+      run: |
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.1/migrate.linux-amd64.tar.gz | tar xvz
+        sudo mv migrate.linux-amd64 /usr/bin/
+        which migrate
+
     - name: Run Migrations
       run: make migrateup
 
